--- a/docker-registry.yml
+++ b/docker-registry.yml
@@ -19,4 +19,4 @@ registry-gui:
     - ENV_DOCKER_REGISTRY_HOST=localhost
     - ENV_DOCKER_REGISTRY_PORT=9001
     - "stackengine:availability=per-host"
-  restart: alway
+  restart: always
